css/styles.css
html{
    height: 100%;
}
body{
    background-color: #263142;
    height: 100%;
}
.container-fluid{
    height: inherit;
}
.app-row{
    height: 100%;
}
.email-panel{
    background-color: #ffffff;
    border-right: 1px solid #dee2e6;
    overflow: auto;
}
.message-panel{
    background-color: #f1f1f1;
}
.search-bar{
    line-height: 0.5;
}
.fill-width{
    width: 100%;
}
.card{
    margin-bottom: 10px;
    background-color: #f1f1f1;
}
.card:hover{
    background-color: #ffffff;
    cursor: pointer;
}
.hidden{
    display:none;
}

